@@ -3,7 +3,9 @@
     * src/widgets/geda_menu_bar.c: Change get_shadow_type argument type to a
       pointer to a GtkWidget, revise geda_menu_bar_size_request to explicitly
       shift left to multiply by 2. Reduce the scope of all variables in
-      geda_menu_bar_size_request.
+      geda_menu_bar_size_request. Utilize macro:
+
+          * geda_get_container_border_width
 
 2020-04-08 Wiley E. Hill <wileyhill@gmail.com>
 
